--- a/P009378.opf/meta.yml
+++ b/P009378.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009378
+id: P009378
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG857
   title: བོད་ལྗོངས་ཀྱི་དཔལ་འབྱོར་
-  volume: ''
   author: ''
+  volumes: {}
